# ContinualReinforcementLearning

./: .gitignore  .pre-commit-config.yaml  BASELINE_PLAN.md  BROWN_TRANSFER.md  Makefile  PLAN.md  README.md  ROADMAP.md  commands.txt  diff.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  heavy-env.yml
agents/: README.md
agents/dreamer/: LIFECYCLE_PARITY.md  PARITY_CLOSED_REPORT.md  TORCH_JAX_PARITY_CHECKLIST.md  __init__.py  (+8 more)
configs/: README.md  base.json
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  ARTIFACT_CONTRACT.md  CONTRIBUTING.md  ERRORS.md  EXPERIMENT_1.md  INSTALL.md  LOCKFILE_STRATEGY.md  OWNERSHIP.md  PHASE0_CONTRACT.md  PHASE_ACCEPTANCE.md  PUBLICATION_PACK.md  QUICKSTART.md  RISK_REGISTER.md  SEEDING_POLICY.md  VERSIONING.md
examples/: stream_trace.json
scripts/: README.md  dreamer_tester.py  generate_run_dashboard.py  serve_eval_dashboard.py
tests/: dreamer_jax_phase1_reference.py  test_agents_loader.py  test_artifacts.py  test_cli.py  test_context.py  test_contracts.py  test_dreamer_parity_smoke.py  test_dreamer_phase1_parity.py  test_eval_scheduler.py  test_execution.py  test_experiment1.py  test_experiment1_quality.py  test_heavy_env_smoke.py  test_loader.py  test_manifest.py  test_metrics.py  test_metrics_regression.py  test_orchestrator.py  test_plots.py  test_plugins.py  test_publication.py  test_registry.py  test_reporting.py  test_resources.py  test_runtime_validation.py  test_schedulers.py  test_schema.py  test_seeding.py  test_smoke.py  test_storage.py  test_task_streams.py  test_validation.py  test_wrappers.py
(+63 files in other folders)
